<?xml version="1.0" encoding="utf-8"?>
<com.itgz8.scancode.CustomConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.itgz8.scancode.BarcodeScanningActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@color/colorBlack"/>

    <View
        android:id="@+id/view_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorViewMask"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:text="@string/scan_title"
        android:textSize="18sp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/icon_exit"
            android:contentDescription="@string/icon_close"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/colorWhite"
            android:text="@string/icon_close"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/colorWhite"
            android:text="@string/cancel_scan_result"
            android:textSize="18sp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/icon_album"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/icon_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:text="@string/scanning_text"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingTop="0dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/ll_flashlight"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_flashlight_on"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_flashlight_on"
                android:visibility="visible"
                android:contentDescription="@string/open_flashlight" />
            <ImageView
                android:id="@+id/iv_flashlight_off"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_flashlight_off"
                android:visibility="gone"
                android:contentDescription="@string/close_flashlight" />

            <TextView
                android:id="@+id/tv_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_flashlight"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <com.itgz8.scancode.CustomImageView
        android:id="@+id/iv_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/colorBlack"
        android:scaleType="fitCenter"
        android:contentDescription="@string/photo_preview" />

    <com.itgz8.scancode.ScanOverlay
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/iv_exit"
        app:layout_constraintTop_toTopOf="@id/tv_tips"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:alpha="1"
        android:background="@color/colorTransparent"/>

</com.itgz8.scancode.CustomConstraintLayout>